Updated description day 24, minor refactoring